<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2017-2024 HERE Europe B.V.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  ~ License-Filename: LICENSE
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.here.xyz</groupId>
    <artifactId>xyz-jobs</artifactId>
    <version>3.21.7-SNAPSHOT</version>
  </parent>

  <name>XYZ Job Service</name>
  <description>XYZ Job Service — A service to run long-running jobs in XYZ</description>
  <artifactId>xyz-job-service</artifactId>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <!-- XYZ libraries -->
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>xyz-util</artifactId>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>xyz-job-steps</artifactId>
    </dependency>

    <!-- Vert.x -->
    <dependency>
      <artifactId>vertx-core</artifactId>
      <groupId>io.vertx</groupId>
    </dependency>
    <dependency>
      <artifactId>vertx-web</artifactId>
      <groupId>io.vertx</groupId>
    </dependency>
    <dependency>
      <artifactId>vertx-openapi</artifactId>
      <groupId>io.vertx</groupId>
    </dependency>
    <dependency>
      <artifactId>vertx-web-openapi-router</artifactId>
      <groupId>io.vertx</groupId>
    </dependency>

    <!-- AWS SDK -->
    <dependency>
      <artifactId>aws-java-sdk-secretsmanager</artifactId>
      <groupId>com.amazonaws</groupId>
      <exclusions>
        <exclusion>
          <artifactId>jackson-annotations</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <!--
      NOTE: The order of the following two dependencies matters
      "sfn" should be chosen over "stepfunctions" by the class loader.
    -->
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>sfn</artifactId>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>stepfunctions</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>jackson-annotations</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- TODO: Use new RDS SDK2 instead -->
    <dependency>
      <artifactId>aws-java-sdk-rds</artifactId>
      <groupId>com.amazonaws</groupId>
      <!-- TODO: put version into main pom's dependency-management -->
      <version>1.12.651</version>
      <exclusions>
        <exclusion>
          <artifactId>jackson-annotations</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>cloudwatchevents</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>jackson-annotations</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <!-- Jackson -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
    </dependency>

    <!-- Util -->
    <dependency>
      <artifactId>guava</artifactId>
      <groupId>com.google.guava</groupId>
    </dependency>

    <!-- Logging libraries -->
    <dependency>
      <artifactId>log4j-slf4j-impl</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
    </dependency>
    <dependency>
      <artifactId>log4j-core</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-jcl</artifactId>
    </dependency>
    <dependency>
      <artifactId>disruptor</artifactId>
      <groupId>com.lmax</groupId>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit-pioneer</groupId>
      <artifactId>junit-pioneer</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>hamcrest</artifactId>
      <groupId>org.hamcrest</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/build.properties</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
        <excludes>
          <exclude>**/build.properties</exclude>
        </excludes>
      </resource>
      <resource>
        <!-- Add scripts to jar -->
        <directory>src/main/bash</directory>
        <targetPath>.</targetPath>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <!-- Include sources -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <configuration>
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/*.SF</exclude>
                <exclude>META-INF/*.DSA</exclude>
                <exclude>META-INF/*.RSA</exclude>
                <exclude>**/Log4j2Plugins.dat</exclude>
              </excludes>
            </filter>
            <filter>
              <artifact>org.apache.logging.log4j:log4j-jcl</artifact>
              <includes>
                <include>**</include>
              </includes>
            </filter>
            <filter>
              <artifact>commons-logging:commons-logging</artifact>
              <includes>
                <include>**</include>
              </includes>
            </filter>
          </filters>
          <createDependencyReducedPom>false</createDependencyReducedPom>
          <transformers>
            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>com.here.xyz.jobs.service.JobService</mainClass>
              <manifestEntries>
                <Multi-Release>true</Multi-Release>
              </manifestEntries>
            </transformer>
            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
          </transformers>
          <finalName>${project.artifactId}-fat</finalName>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>local</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>exec-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>installAWSResources</id>
                <phase>install</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <executable>docker</executable>
                  <arguments>
                    <argument>run</argument>
                    <argument>--rm</argument>
                    <argument>--entrypoint</argument>
                    <argument> </argument>
                    <argument>-v</argument>
                    <argument>${project.basedir}/src/main/bash/localSetup.sh:/aws/localSetup.sh</argument>
                    <argument>--add-host</argument>
                    <argument>host.docker.internal=host-gateway</argument>
                    <argument>amazon/aws-cli</argument>
                    <argument>./localSetup.sh</argument>
                    <argument>true</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
            <groupId>org.codehaus.mojo</groupId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>